--- a/ReportingTrends_website/package.json
+++ b/ReportingTrends_website/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
