--- a/ReportingTrends_website/package.json
+++ b/ReportingTrends_website/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^4.4.0",
     "@nivo/line": "^0.59.3",
+    "@nivo/scatterplot": "^0.59.3",
     "axios": "^0.19.0",
     "d3": "^5.14.2",
     "gatsby": "^2.17.11",
