--- a/ReportingTrends_website/package.json
+++ b/ReportingTrends_website/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.11.0",
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.1",
+    "react-loadable": "^5.5.0",
     "react-plotly.js": "2.4.0"
   },
   "devDependencies": {
