--- a/ReportingTrends_website/package.json
+++ b/ReportingTrends_website/package.json
@@ -26,7 +26,8 @@
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
-    "react-plotly.js": "2.4.0"
+    "react-plotly.js": "2.4.0",
+    "simple-statistics": "^7.0.7"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
